--- a/style.css
+++ b/style.css
@@ -277,3 +277,73 @@ button:focus {
 }
 
 /*==========================================================================Navbar Start===========================================================================*/
+nav{
+    display: flex;
+    justify-content: center;
+    box-shadow: 0 1px 1px 0 rgb(0 0 0 / 16%);
+}
+
+.nav-item{
+    text-align: center;
+    font-size: 14px;
+    font-weight: 600;
+    margin:5px 35px
+}
+
+.nav-item img{
+    width: 64px;
+    height: 64px;
+}
+
+
+/*====================================================================Section 1 Start ===============================================================================*/
+ .slider{
+    z-index: -1;
+    margin-top: 10px;
+    text-align: center;
+    height: 370px;
+    box-shadow: -5px 5px 7px rgba(0, 0, 0, 0.1),
+    5px 5px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    margin-left: 100px;
+} 
+.subheading{
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    padding: 5px;
+    box-shadow: 0 1px 1px 0 rgb(0 0 0 / 16%);
+}
+.card-layout{
+    margin: 20px;
+}
+.card-layout img{
+    width: 200px;
+    margin-bottom: 5px;
+}
+.card-title{
+    font-size: 14px;
+    font-weight: 600;
+}
+.price{
+    margin-top: -5px;
+    color: #388e3c;
+    font-size: 16px;
+}
+.brand{
+    font-size: 14px;
+    margin-top: -8px;
+}
+.banner{
+    display: flex;
+    justify-content:start;
+    margin-top: 10px;
+    
+}
+.banner img{
+  width:250px ;
+  height: 370px;
+  box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.1),
+    5px 5px 10px rgba(0, 0, 0, 0.1);
+}
+
