--- a/style.css
+++ b/style.css
@@ -304,33 +304,41 @@ nav{
     height: 370px;
     box-shadow: -5px 5px 7px rgba(0, 0, 0, 0.1),
     5px 5px 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
     margin-left: 100px;
 } 
-.subheading{
+.secheading{
     display: flex;
     justify-content: space-between;
-    align-content: center;
+    align-items: center;
     padding: 5px;
+    margin: 5px;
     box-shadow: 0 1px 1px 0 rgb(0 0 0 / 16%);
 }
+.scroll{
+  display: flex;
+  flex-wrap: nowrap;
+  
+}
 .card-layout{
+    height: 100%;
     margin: 20px;
 }
 .card-layout img{
+    height: 47%;
     width: 200px;
-    margin-bottom: 5px;
+    margin-bottom: 25px;
 }
-.card-title{
+
+.card-layout .card-title{
     font-size: 14px;
     font-weight: 600;
 }
-.price{
+.card-layout .price{
     margin-top: -5px;
     color: #388e3c;
     font-size: 16px;
 }
-.brand{
+.card-layout .brand{
     font-size: 14px;
     margin-top: -8px;
 }
@@ -346,4 +354,27 @@ nav{
   box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.1),
     5px 5px 10px rgba(0, 0, 0, 0.1);
 }
-
+.slider2{
+    z-index: -1;
+    margin-top: 10px;
+    text-align: center;
+    height: 370px;
+    box-shadow: -5px -5px 7px rgba(0, 0, 0, 0.1),
+    5px 5px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    margin-left: 100px;
+    margin-right: 110px;
+}
+.section-2-subheading p{
+  text-align: start;
+  margin-top: -8px;
+  color: rgb(139, 132, 132);
+  font-size: 14px;
+}
+.subheading2{
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    padding: 5px;
+    box-shadow: 0 1px 1px 0 rgb(0 0 0 / 16%);
+}
