--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body {
     padding: 0;
     font-family: 'Roboto', Arial, sans-serif;
     box-sizing: border-box;
-    background-color:#f1f3f6; 
+    background-color: #f1f3f6;
+    
 }
 
 
@@ -13,7 +14,7 @@ body {
     background-color: #2874f0;
     display: flex;
     justify-content: center;
-   
+
 }
 
 .logo {
@@ -54,7 +55,7 @@ body {
 .search {
     display: flex;
     margin: 10px;
-    
+
 }
 
 .search button {
@@ -70,7 +71,7 @@ body {
 }
 
 .search input {
-    
+
     height: 36px;
     width: 476px;
     border: none;
@@ -80,12 +81,13 @@ body {
     border-radius: 2px 0px 0px 2px;
     box-shadow: -7px -7px 10px rgba(0, 0, 0, 0.07), -7px -7px 10px rgba(0, 0, 0, 0.07);
 }
+
 button:focus {
     outline: none;
 }
 
 /*-------------------------------------------------------Recent Search--------------------------------------------------------------------------------------*/
-.RecentSearch{
+.RecentSearch {
     display: none;
     position: absolute;
     top: 46px;
@@ -93,50 +95,57 @@ button:focus {
     padding: 8px 16px;
     width: 518px;
     height: 360px;
-    box-shadow:-5px 5px 7px rgba(0,0,0,0.2), 
-    5px 5px 10px rgba(0,0,0,0.2);
+    box-shadow: -5px 5px 7px rgba(0, 0, 0, 0.2),
+        5px 5px 10px rgba(0, 0, 0, 0.2);
     border-top: 1px solid #ccc;
+    z-index: 2;
+
 }
-.RecentSearch-List{
+
+.RecentSearch-List {
     display: flex;
     font-size: 15px;
-   
+
+
 }
-.RecentSearch-List i{
+
+.RecentSearch-List i {
     color: rgb(121, 115, 115);
     font-size: 18px;
 }
-.RecentSearch-List p{
-    padding-left:15px;
+
+.RecentSearch-List p {
+    padding-left: 15px;
     margin-top: -3px;
 }
 
-.DiscoverMore{
-  padding-left:16px;
-  font-size: 10px;
-  letter-spacing: 1px;
-  font-weight: bold;
-  color: rgb(121, 115, 115);
-  margin-top: -3px;
+.DiscoverMore {
+    padding-left: 16px;
+    font-size: 10px;
+    letter-spacing: 1px;
+    font-weight: bold;
+    color: rgb(121, 115, 115);
+    margin-top: -3px;
 }
-.loginBtn{
+
+.loginBtn {
     color: #2874f0;
     background-color: #ffffff;
     padding: 5px 40px;
-  outline: none;
-   height: 31px;
-   margin-left: 150px;
-   margin-top: 13px;
-   border: 1px solid #dbdbdb;
-   border-radius: 2px;
-   font-weight: 600;
-   font-size: 16px;
-   letter-spacing: 0.1px;
-   cursor: pointer;
-   
+    outline: none;
+    height: 31px;
+    margin-left: 150px;
+    margin-top: 13px;
+    border: 1px solid #dbdbdb;
+    border-radius: 2px;
+    font-weight: 600;
+    font-size: 16px;
+    letter-spacing: 0.1px;
+    cursor: pointer;
+
 }
 
-.search:focus-within .RecentSearch{
+.search:focus-within .RecentSearch {
     display: block;
 }
 
@@ -144,7 +153,7 @@ button:focus {
 /*-------------------------------------------------------------Login Button Hover------------------------------------------------------------------------------------*/
 
 
-.HoverLogin{
+.HoverLogin {
     position: absolute;
     top: 61px;
     height: 385px;
@@ -156,14 +165,15 @@ button:focus {
     flex-direction: column;
     align-items: center;
     box-shadow: -5px 5px 7px rgba(0, 0, 0, 0.2),
-    5px 5px 10px rgba(0, 0, 0, 0.2);
+        5px 5px 10px rgba(0, 0, 0, 0.2);
     padding: 8px 10px;
     font-weight: 500;
     color: #000;
     cursor: pointer;
-   
+    z-index: 2;
 }
-.triangle-up{
+
+.triangle-up {
     position: relative;
     width: 0;
     height: 0;
@@ -171,42 +181,54 @@ button:focus {
     border-right: 10px solid transparent;
     border-bottom: 12px solid #ffffff;
     top: -20px;
-   
+
 }
-.Newuser{
+
+.Newuser {
     width: 100%;
     display: flex;
     justify-content: space-between;
     font-size: 15px;
 }
-.Newuser a{
+
+.Newuser a {
     color: #2874f0;
-}    
-.loginMenu{
-    width: 250px;
-    
 }
-.menuList{
+
+.loginMenu {
+    width: 250px;
+
+}
+
+.menuList {
     padding-left: 10px;
     display: flex;
     padding-top: 16px;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
-.menuList p{
+
+.menuList p {
     margin-top: -3px;
     padding-left: 10px;
 }
-.menuList i{
+
+.menuList i {
     color: #2874f0;
 }
-.loginBtn:hover .HoverLogin{
-    display: flex;
+
+.menuList:hover {
+    background-color: #f0f0f0;
 }
-.triangle-up:hover .HoverLogin{
+
+.loginBtn:hover .HoverLogin {
     display: flex;
 }
 
-.Navlink1{
+.triangle-up:hover .HoverLogin {
+    display: flex;
+}
+
+.Navlink1 {
     font-size: 16px;
     letter-spacing: 0.1px;
     color: #ffffff;
@@ -214,19 +236,21 @@ button:focus {
     text-decoration: none;
     padding-top: 20px;
     margin-left: 40px;
-    
+
 }
-.Navlink1:hover{
+
+.Navlink1:hover {
     color: #ffffff;
     text-decoration: none;
 }
-.Navlink1 img{
+
+.Navlink1 img {
     margin-top: -3px;
     margin-right: 5px;
 }
 
 /*-------------------------------------------------------------------------More hover---------------------------------------------------------------------------------*/
-.HoverMore{
+.HoverMore {
     position: absolute;
     top: 61px;
     height: 220px;
@@ -237,14 +261,16 @@ button:focus {
     flex-direction: column;
     align-items: center;
     box-shadow: -5px 5px 7px rgba(0, 0, 0, 0.2),
-    5px 5px 10px rgba(0, 0, 0, 0.2);
+        5px 5px 10px rgba(0, 0, 0, 0.2);
     padding: 8px 10px;
     font-weight: 500;
     color: #000;
     cursor: pointer;
     display: none;
+    z-index: 2;
 }
-.triangle-up-more{
+
+.triangle-up-more {
     position: relative;
     width: 0;
     height: 0;
@@ -253,63 +279,92 @@ button:focus {
     border-bottom: 12px solid #ffffff;
     top: -20px;
 }
-.moreMenu{
+
+.moreMenu {
     width: 250px;
 }
-.moreList{
+
+.moreList {
+    margin-top: -15px;
     padding-left: 10px;
+    padding-top: 15px;
     display: flex;
-    
+
 }
-.moreList p{
+
+.moreList:hover {
+    background-color: #f0f0f0;
+}
+
+.moreList p {
     margin-top: -3px;
     padding-left: 10px;
 }
-.moreList i{
+
+.moreList i {
     color: #2874f0;
 }
-.angledownIcon:hover .down{
+
+.angledownIcon:hover .down {
     transition: 0.1s;
     transform: rotate(-180deg);
     color: #ffffff;
 }
-.angledownIcon:hover .HoverMore{
+
+.angledownIcon:hover .HoverMore {
     display: flex;
 }
 
 /*==========================================================================Navbar Start===========================================================================*/
-nav{
+nav {
     display: flex;
     justify-content: center;
     box-shadow: 0 1px 1px 0 rgb(0 0 0 / 16%);
     background-color: #ffffff;
 }
 
-.nav-item{
+.nav-item {
     text-align: center;
     font-size: 14px;
     font-weight: 600;
-    margin:5px 35px
+    margin: 5px 35px
 }
 
-.nav-item img{
+.nav-item:hover .item-name a {
+    color: #2874f0;
+
+}
+
+.nav-item:hover .item-name i {
+    transition: 0.1s;
+    transform: rotate(-180deg);
+}
+
+.nav-item img {
     width: 64px;
     height: 64px;
 }
 
+.item-name a {
+    text-decoration: none;
+    color: #000;
+}
+
+
 
 /*====================================================================Section 1 Start ===============================================================================*/
-.slider{
+.slider {
+    z-index: 1;
     background-color: #ffffff;
-    z-index: -1;
     margin-top: 10px;
     text-align: center;
     height: 370px;
     box-shadow: -5px 5px 7px rgba(0, 0, 0, 0.1),
-    5px 5px 10px rgba(0, 0, 0, 0.1);
+        5px 5px 10px rgba(0, 0, 0, 0.1);
     margin-left: 100px;
-} 
-.secheading{
+}
+
+.secheading {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -317,70 +372,108 @@ nav{
     margin: 5px;
     box-shadow: 0 1px 1px 0 rgb(0 0 0 / 16%);
 }
-.scroll{
-  display: flex;
-  overflow: hidden;
-  height: 100%;
-  
+.dealoftheday{
+    display: flex;
 }
-.card-layout{
+.dealoftheday i{
+    margin: 8px;
+}
+.dealoftheday p{
+    margin-left: 5px;
+    margin-top: 5px;
+    color: rgb(131, 130, 130);
+}
+.scroll {
+    display: flex;  
+    overflow: hidden;
+    height: 100%;
+
+
+}
+
+.card-layout {
     height: 100%;
     margin: 20px;
 }
-.card-layout img{
+.card-layout:hover img{
+    transform: scale(102%);
+}
+.card-layout img {
     height: 45%;
     width: 200px;
     margin-bottom: 25px;
+    padding: 10px;
 }
 
-.card-layout .card-title{
+.card-layout .card-title {
     font-size: 14px;
     font-weight: 600;
 }
-.card-layout .price{
+
+.card-layout .price {
     margin-top: -5px;
     color: #388e3c;
     font-size: 16px;
 }
-.card-layout .brand{
+
+.card-layout .brand {
     font-size: 14px;
     margin-top: -12px;
 }
-.banner{
+
+.banner {
     display: flex;
-    justify-content:start;
+    justify-content: start;
     margin-top: 10px;
-    
+    margin-left: 3px;
 }
-.banner img{
-  width:250px ;
-  height: 370px;
-  box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.1),
-    5px 5px 10px rgba(0, 0, 0, 0.1);
+
+
+.banner img {
+    width: 250px;
+    height: 370px;
+    box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.1),
+        5px 5px 10px rgba(0, 0, 0, 0.1);
 }
-.slider2{
+
+.carousel_btn {
+    position: absolute;
+    top: 35%;
+    padding: 40px 15px;
+    box-shadow: 1px 2px 10px -1px rgb(0 0 0 / 30%);
+    background-color: hsla(0, 0%, 100%, 0.98);
+    cursor: pointer;
+    left: 97%;
+    border-radius: 4px 0 0 4px;
+}
+
+
+.slider2 {
     background-color: #ffffff;
-    z-index: -1;
+    z-index: 1;
     margin-top: 10px;
     text-align: center;
     height: 370px;
     box-shadow: -5px -5px 7px rgba(0, 0, 0, 0.1),
-    5px 5px 10px rgba(0, 0, 0, 0.1);
+        5px 5px 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     margin-left: 100px;
     margin-right: 110px;
 }
-.section-2-subheading p{
-  text-align: start;
-  margin-top: -8px;
-  color: rgb(139, 132, 132);
-  font-size: 14px;
-  height: 8px;
+
+.section-2-subheading p {
+    text-align: start;
+    margin-top: -8px;
+    color: rgb(139, 132, 132);
+    font-size: 14px;
+    height: 8px;
 }
-.subheading2{
+
+.subheading2 {
     display: flex;
     justify-content: space-between;
     align-content: center;
     padding: 5px;
     box-shadow: 0 1px 1px 0 rgb(0 0 0 / 16%);
 }
+
