--- a/style.css
+++ b/style.css
@@ -351,15 +351,21 @@ nav {
 
 
 /*--Section 1 Start --*/
-.section-1 {
+.section-1{
+    display: flex;
+    justify-content: center;
+    
+}
+.subsection-1 {
     z-index: 1;
     background-color: #ffffff;
     margin-top: 10px;
+    margin-right:10px;
     text-align: center;
-    height: 370px;
+    height: 360px;
     box-shadow: -5px 5px 7px rgba(0, 0, 0, 0.1),
         5px 5px 10px rgba(0, 0, 0, 0.1);
-    margin-left: 100px;
+    
 }
 
 .section-heading {
@@ -435,8 +441,7 @@ nav {
 
 
 .banner img {
-    width: 250px;
-    height: 370px;
+    height: 360px;
     box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.1),
         5px 5px 10px rgba(0, 0, 0, 0.1);
 }
@@ -453,7 +458,7 @@ nav {
 }
 
 /*--Section 2--*/
-.section-2 {
+/* .section-2 {
     background-color: #ffffff;
     z-index: 1;
     margin-top: 10px;
@@ -464,8 +469,20 @@ nav {
     overflow: hidden;
     margin-left: 100px;
     margin-right: 110px;
+} */
+.subsection-2 {
+    
+   
+    z-index: 1;
+    background-color: #ffffff;
+    margin-top: 10px;
+    margin-right:13px;
+    text-align: center;
+    height: 360px;
+    box-shadow: -5px 5px 7px rgba(0, 0, 0, 0.1),
+        5px 5px 10px rgba(0, 0, 0, 0.1);
+    
 }
-
 .section-2-subheading p {
     text-align: start;
     margin-top: -8px;
