--- a/style.css
+++ b/style.css
@@ -4,9 +4,7 @@ body {
     font-family: 'Roboto', Arial, sans-serif;
     box-sizing: border-box;
     background-color: #f1f3f6;
-
 }
-
 
 /*--Hearder Section Start--*/
 .header {
@@ -138,18 +136,18 @@ button:focus {
 .loginBtn {
     color: #2874f0;
     background-color: #ffffff;
-    padding: 5px 40px;
+    padding: 0px 40px;
     outline: none;
     height: 31px;
     margin-left: 150px;
-    margin-top: 13px;
+    margin-top:13px;
     border: 1px solid #dbdbdb;
     border-radius: 2px;
     font-weight: 600;
     font-size: 16px;
     letter-spacing: 0.1px;
     cursor: pointer;
-
+    text-align: center;
 }
 .loginBtn:hover .HoverLogin {
     display: flex;
@@ -351,20 +349,17 @@ nav {
 
 
 /*--Section 1 Start --*/
-.section-1{
-    display: flex;
-    justify-content: center;
-    
-}
-.subsection-1 {
+.section-1 {
     z-index: 1;
     background-color: #ffffff;
     margin-top: 10px;
-    margin-right:10px;
     text-align: center;
-    height: 360px;
+    height: 270px;
     box-shadow: -5px 5px 7px rgba(0, 0, 0, 0.1),
         5px 5px 10px rgba(0, 0, 0, 0.1);
+    padding-right:0 ;
+    padding-left:0; 
+    position: relative;   
     
 }
 
@@ -372,13 +367,13 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5px;
     margin: 5px;
     box-shadow: 0 1px 1px 0 rgb(0 0 0 / 16%);
 }
 
 .dealoftheday {
     display: flex;
+    padding-top: 10px;
 }
 
 .dealoftheday i {
@@ -401,7 +396,8 @@ nav {
 
 .card-layout {
     height: 100%;
-    margin: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .card-layout:hover img {
@@ -409,9 +405,8 @@ nav {
 }
 
 .card-layout img {
-    height: 45%;
-    width: 200px;
-    margin-bottom: 25px;
+    height: 42%;
+    width: 150px;
     padding: 10px;
 }
 
@@ -437,56 +432,64 @@ nav {
     justify-content: start;
     margin-top: 10px;
     margin-left: 3px;
+    
 }
 
 
 .banner img {
-    height: 360px;
-    box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.1),
+    width: 100%;
+    object-fit: cover;
+    z-index: 1;
+    height: 270px;
+    border: 3px solid white;
+    box-shadow: -5px 5px 7px rgba(0, 0, 0, 0.1),
         5px 5px 10px rgba(0, 0, 0, 0.1);
 }
 
 .carousel_btn {
-    position: absolute;
+    position:absolute;
     top: 35%;
-    padding: 40px 15px;
+    right: 0%;
     box-shadow: 1px 2px 10px -1px rgb(0 0 0 / 30%);
     background-color: hsla(0, 0%, 100%, 0.98);
     cursor: pointer;
-    left: 96.8%;
+    padding: 30px 12px;
     border-radius: 4px 0 0 4px;
 }
 
 /*--Section 2--*/
-/* .section-2 {
-    background-color: #ffffff;
-    z-index: 1;
-    margin-top: 10px;
-    text-align: center;
-    height: 370px;
-    box-shadow: -5px -5px 7px rgba(0, 0, 0, 0.1),
-        5px 5px 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    margin-left: 100px;
-    margin-right: 110px;
-} */
-.subsection-2 {
-    
-   
+
+.section-2 {
     z-index: 1;
     background-color: #ffffff;
     margin-top: 10px;
-    margin-right:13px;
     text-align: center;
-    height: 360px;
+    height: 270px;
     box-shadow: -5px 5px 7px rgba(0, 0, 0, 0.1),
         5px 5px 10px rgba(0, 0, 0, 0.1);
-    
+    margin-right: 0;
+    padding-left: 0;
+    padding-right: 0;
 }
+
 .section-2-subheading p {
     text-align: start;
     margin-top: -8px;
     color: rgb(139, 132, 132);
     font-size: 14px;
     height: 8px;
+}
+
+
+
+
+
+
+
+
+
+@media (min-width: 1200px) {
+    .container{
+        max-width: 1350px;
+    }
 }
